--- a/literatura.bib
+++ b/literatura.bib
@@ -3,7 +3,8 @@
 
 
 %-------------------------- LITERATURA MAGISTRSKA --------------------------
-% web page citation
+
+%-------------------------- DOKUMENTACIJA ---------------------------------------
 @misc{arc_howto,
 	author = "Avery Pennarun",
 	title = "{Linux ARCnet HOWTO}",
@@ -23,6 +24,8 @@
 	howpublished = "Dosegljivo: \url{http://www.jr3.com/product-manuals.html}",
 	note = "[Dostopano: 6. 17. 2015]"
 }
+
+%-------------------------- KNJIGE ---------------------------------------
 
 @book{mihelj_vodenje,
 	title={Vodenje robotov},
@@ -56,14 +59,62 @@
 	address = {Ljubljana}
 }
 
+@book{craig_robintro,
+	title={Introduction to Robotics},
+	author={Craig, John J},
+	year={2005},
+	publisher={Pearson Education International},
+	address = {Z.D.A.}
+}
+
+@book{siciliano_robot,
+	title={Robotics, Modelling, Planning and Control},
+	author={Siciliano, Bruno and Sciavicco, Lorenzo and Villani, Luigi and Oriolo, Giuseppe},
+	year={2009},
+	publisher={Springer},
+	address = {London}
+}
+
+%-------------------------- ?LANKI ---------------------------------------
+
+@article{voung_pa10,
+	title={Dynamic Model Identification for Industrial Robots},
+	author={Vuong, Ngoc D. and Ang, Marcelo H. Jr.},
+	journal={Acta Polytechnica Hungarica},
+	year={2009},
+	address = {Singapur}
+}
+
+@article{aalst_pa10,
+	title={Dynamic identification of a Mitsubishi PA-10 robotic manipulator},
+	author={van der Aalst, Ruud and Ang, Marcelo H. Jr. and Nijmeijer, Henk},
+	journal={ICAR},
+	year={1999},
+	address = {Tokyo}
+}
+
+@article{rodrigo_pa10,
+	title={Dynamics Identification and Control of an Industrial Robot},
+	author={Jamisola, Rodrigo and Ang, Marcelo Jr. and Lim, Tao Ming and Khatib, Oussama and Lim, Ser Yong},
+	journal={ICAR},
+	year={1999},
+	address = {Tokyo}
+}
+
+@article{mhi_pa10,
+	title={Mitsubishi Clean Room Robot},
+	author={Mitsubishi Heavy Industries Ltd.},
+	journal={Seminarska naloga},
+	year={2003},
+}
 
 @article{petric_nevronska,
 	title={Kompenzacija trenja in gravitacije na robotu Mitsubishi PA-10},
 	author={Petri\v{c}, Tadej and Munih, Marko},
 	journal={Seminarska naloga},
-	year={2010}
+	year={2010},
 	address = {Ljubljana}
-};
+}
 
 
 %-------------------------- PREDLOGE ---------------------------------------
