--- a/literatura.bib
+++ b/literatura.bib
@@ -25,6 +25,12 @@
 	note = "[Dostopano: 6. 17. 2015]"
 }
 
+@MANUAL{pa10-manual,
+	title = "Portable General Purpose Intelligent Arm - Operating Manual",
+	organization = "Mitsubishi Heavy Industries",
+	edition = "Rev. 1",
+}
+
 %-------------------------- KNJIGE ---------------------------------------
 
 @book{mihelj_vodenje,
@@ -75,7 +81,16 @@
 	address = {London}
 }
 
-%-------------------------- ?LANKI ---------------------------------------
+%-------------------------- CLANKI ---------------------------------------
+
+@article{bejczy_dynamics,
+	title={Simplified robot arm dynamics for control},
+	author={Bejczy, A. K. and Paul, R. P.},
+	journal={Decision and Control including the Symposium on Adaptive Processes, 1981 20th IEEE Conference on },
+	year={1981},
+	pages={261-262},
+	address = {San Diego}
+}
 
 @article{voung_pa10,
 	title={Dynamic Model Identification for Industrial Robots},
