--- a/macros.tex
+++ b/macros.tex
@@ -2,3 +2,4 @@
 \newcommand{\matlab}{MATLAB\textsuperscript{\textregistered}}
 \newcommand{\simulink}{SIMULINK\textsuperscript{\textregistered}}
 \newcommand{\matsim}{MATLAB\textsuperscript{\textregistered} SIMULINK\textsuperscript{\textregistered}}
+\newcommand{\thom}{$\textbf{T}^i_{i+1}$}
